<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_call"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contact"
        android:title="@string/contacts"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_voicemail"
        android:icon="@drawable/ic_voice_mail"
        android:title="@string/voicemail"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorites"
        android:title="@string/favorites"
        app:showAsAction="ifRoom" />

</menu>
